--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,17 +22,20 @@
         <main id="main">
             <div class="container">
                 <div class="main">
-                    성향을 간단하게 테스트 한 이후에
+                    성향을 간단하게 테스트 한 이후
                     <br>
                     당신이 좋아할 게임을 추천해 드릴게요.
+                    <br>
                     <br>
                     지금 바로 확인해 보세요
                 </div>
             </div>
-            <p class="word1">총 20문항, 3분소요</p>
+            <p class="word1"> <총 20문항, 3분소요> </p>
             <br>
-
-            <a class="button" href="/input">테스트 하러 가기</a>
+            <div class="button">
+                <div class="effect"></div>
+                <a href="/input">테스트 하러 가기</a>
+            </div>
 
         </main>
 
