--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -20,7 +20,7 @@
         <!-- header -->
 
         <main id="main">
-            <div class="container">
+            <div class="hello_word">
                 <p th:text="'안녕하세요' + ${name}">hello! empty</p>
             </div> <!-- /container -->
 
