--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -24,9 +24,8 @@
                 <form action="/check" method="post">
                     <div class="form-group">
                         <label for="name">이름</label>
-                        <input type="text" id="name" name="name" placeholder="이름을 입력해주세요">
+                        <input type="text" id="name" name="name" placeholder="이름을 입력해주세요"> <button type="submit" class="btn_submit">등록</button>
                     </div>
-                    <button type="submit" class="btn_submit">등록</button>
                 </form>
             </div> <!-- /container -->
 
