--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -20,10 +20,12 @@
         <!-- header -->
 
         <main id="main">
-            <div class="hello_word">
-                <p th:text="'안녕하세요' + ${name}">hello! empty</p>
-            </div> <!-- /container -->
-
+            <form action="/check" method="post">
+                <div class="form-group">
+                    <label for="name">이름</label>
+                    <input type="text" id="name" name="name" placeholder="이름을 입력해주세요"> <button type="submit" class="btn_submit">등록</button>
+                </div>
+            </form>
         </main>
 
 
