--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -20,8 +20,17 @@
         <!-- header -->
 
         <main id="main">
-            <div class="hello_word">
-                <p th:text="'안녕하세요' + ${name}">hello! empty</p>
+            <div th:each = "game : ${gamelist}">
+                <table border="1">
+                    <tr align="center">
+                        <td th:text="${game.id}  "></td>
+                        <td><img th:src="@{./img/}+${game.uri}+.jpg"></td>
+                        <td></td>
+                    </tr>
+                    <tr align="center">
+                        <td id="gamename" colspan="2" th:text="${game.name}"></td>
+                    </tr>
+                </table>
             </div> <!-- /container -->
 
         </main>
