--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -21,7 +21,7 @@
 
         <main id="main">
             <div class="hello_word">
-                <p th:text="'안녕하세요' + ${one.value}">hello! empty</p>
+                <p th:text="'안녕하세요' + ${val.get('1')}">hello! empty</p>
             </div> <!-- /container -->
 
         </main>
