--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-
+        <!-- 스크립트 -->
+        <script type="module" th:src="@{/js/app.js}"></script>
 
         <header id="header">
             <div id="container">
