--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,32 +1,15 @@
 /* 백그라운드 */
-* {
-    outline: 0;
-    margin: 0;
-    padding: 0;
-}
+* { outline: 0; margin: 0; padding: 0; }
 
-html {
-    width: 100%;
-    height: 100%;
-}
+html { width: 100%; height: 100%; }
 
-body {
-    width: 100%;
-    height: 100%;
-    background-color: #c5beaf;
-}
+body { width: 100%; height: 100%; background-color: #c5beaf; }
 
-canvas {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    z-index: -4;
-}
+canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
 /* 레이아웃 */
 #header {}
-#footer {text-align: center;}
+#footer {text-align: center; position: relative; transform: translateY(-100%);}
 
 /* 컨테이너 */
 /*.container {width: 100%; margin: 0 auto; background: rgba(0,0,0,0.3)}*/
@@ -54,7 +37,7 @@ canvas {
 .header_object h1 {margin: 50px;}
 
 /* 메인 */
-#main {background: #333D79;}
+#main {height: 100%}
 .main {width: 25rem; background: rgba(230, 235, 239, 0.4); font-size: 1.3rem; word-spacing: 0.2rem;
     border-radius: 40px; margin-right: auto; margin-left: auto;
     padding: 3rem; color: white; display: block;}
