--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-
+        <script type="module" th:src="@{/js/app.js}"></script>
 
         <header id="header">
             <div id="container">
