--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -24,7 +24,7 @@
             <div class="main-check" th:each="que : *{question}">
                 <div class="main-check-question" th:text="${que.getQuestion()}"></div>
                 <div th:each="ans : ${answer}" class="main-check-box">
-                    <input type="radio" th:value="${ans.getNumber()}" th:name="${que.getNumber()}" class="main-check-input">
+                    <input type="radio" th:value="${ans.getNumber()}" th:name="${que.getParameter()}" class="main-check-input">
                     <label th:text="${ans.getAnswer()}" class="main-check-label"></label>
                 </div>
             </div>
