--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@
 
 html { width: 100%; height: 100%; }
 
-body { width: 100%; height: 100%; background: #50586C; }
+body { width: 100%; height: 100%; background: #FCEDDA; }
 
 canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
@@ -55,6 +55,25 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 }
 .main-check-box{
     display: inline;
+}
+
+#main .main-check-question {
+    text-align: center; font-size: 2rem; color: #EE4E34; background: rgba(255, 255, 255); padding: 2rem;
+    width: 40rem; margin-right: auto; margin-left: auto; border: 2px solid #EE4E34
+}
+
+#main .main-check-box {
+    display: flex; justify-content: space-between; text-align: center; margin: 1.3rem; margin: auto; width: 40rem;
+    padding: 2rem; font-size: 1.5rem;
+
+}
+
+#main .main-check-box .main-check-box-matter {
+    width: 15rem;
+}
+
+#main .main-check-box input {
+    accent-color: #EE4E34;
 }
 
 
