--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -21,6 +21,32 @@
 
         <main id="main">
             <div class="container">
+                <div class="main">
+                    성향을 간단하게 테스트 한 이후
+                    <br>
+                    당신이 좋아할 게임을 추천해 드릴게요.
+                    <br>
+                    <br>
+                    이름을 입력해 주시겠습니까?
+                </div>
+            </div>
+            <div class="container">
+                <div class="main2">
+                    솔직하게<br>
+                    답변해줘요
+                </div>
+                <div class="main2">
+                    솔직하게<br>
+                    답변해줘요
+                </div>
+                <div class="main2">
+                    솔직하게<br>
+                    답변해줘요
+                </div>
+            </div>
+
+
+            <div class="container">
                 <form action="/check" method="post">
                     <div class="form-group">
                         <label for="name">이름</label>
