--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@
 
 html { width: 100%; height: 100%; }
 
-body { width: 100%; height: 100%; background: #50586C; }
+body { width: 100%; height: 100%; background: #FCEDDA; }
 
 canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
@@ -34,15 +34,103 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 /* 헤더 */
 #header {margin: 4em auto;}
 .header_object {text-align: center}
-.header_object h1 {margin: 50px; color: rgba( 0, 0, 0, 0.2 ); font-size: 50px; position: relative; -webkit-text-stroke: 0.1vw #DCE2F0; }
-.header_object span {}
+.header_object h1 {font-family:'MaplestoryOTFBold';margin: 50px; color: rgba( 238, 78, 52, 0.2 ); font-size: 50px; position: relative; -webkit-text-stroke: 0.1vw #EE4E34;}
+.header_object span {
+    color:rgba(238, 118, 118, 1 );
+    position: relative;
+    font-size: 6rem;
+    font-weight: 700;
+    text-shadow:
+            0.05em 0 0 rgba(255,0,0,0.75),
+            -0.025em -0.05em 0 rgba(0,255,0,0.75),
+            0.025em 0.05em 0 rgba(0,0,255,0.75);
+
+    animation: glitch 500ms infinite;
+}
+@font-face {
+    font-family: 'DOSGothic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/DOSGothic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MaplestoryOTFBold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/MaplestoryOTFBold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.header_object span b{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.header_object span b:first-child{
+    animation: glitch 650ms infinite;
+    clip-path: polygon(0 0, 100% 0 ,100% 45%,0 45%);
+    transform: translate(-0.05em, -0.0125em);
+    opacity: 0.8;
+}
+.header_object span b:last-child{
+    animation: glitch 375ms infinite;
+    clip-path: polygon(0 60%, 100% 60% ,100% 100%,0 100%);
+    transform: translate(0.0125em,0.025em);
+    opacity: 0.8;
+}
+@keyframes glitch {
+    0%{
+        text-shadow:
+                0.05em 0 0 rgba(255,0,0,0.75),
+                -0.025em -0.05em 0 rgba(0,255,0,0.75),
+                0.025em 0.05em 0 rgba(0,0,255,0.75);
+    }
+    14%{
+        text-shadow:
+                0.05em 0 0 rgba(255,0,0,0.75),
+                -0.025em -0.05em 0 rgba(0,255,0,0.75),
+                0.025em 0.05em 0 rgba(0,0,255,0.75);
+    }
+    15%{
+        text-shadow:
+                -0.05em -0.025em 0 rgba(255,0,0,0.75),
+                0.025em -0.025em 0 rgba(0,255,0,0.75),
+                -0.05em -0.05em 0 rgba(0,0,255,0.75);
+    }
+    50%{
+        text-shadow:
+                0.025em 0.05em 0 rgba(255,0,0,0.75),
+                0.05em 0 0 rgba(0,255,0,0.75),
+                0 -0.05em 0 rgba(0,0,255,0.75);
+    }
+    99%{
+        text-shadow:
+                0.025em 0.05em 0 rgba(255,0,0,0.75),
+                0.05em 0 0 rgba(0,255,0,0.75),
+                0 -0.05em 0 rgba(0,0,255,0.75);
+    }
+    100%{
+        text-shadow:
+                -0.025em -0.025em 0 rgba(255,0,0,0.75),
+                -0.025em -0.025em 0 rgba(0,255,0,0.75),
+                -0.025em -0.05em 0 rgba(0,0,255,0.75);
+    }
+    
+}
 
 /* 메인 */
 #main {height: 100%}
 .main {width: 25rem; background: rgba(230, 235, 239, 0.4); font-size: 1.3rem; word-spacing: 0.2rem;
     border-radius: 40px; margin-right: auto; margin-left: auto;
-    padding: 3rem; color: white; display: block;}
-.word1{text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
+    padding: 3rem; color: white; display: block; font-family: DOSGothic}
+.word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
+.form-group{text-align: center; width: 100%; margin: 30px;}
+.hello_word{text-align: center; width: 100%;}
+.main2 {
+    border:2px solid deepskyblue; width: 8rem; background: rgb(255,255,255,0.6); font-size: 1.3rem; word-spacing: 0.2rem;
+    border-radius: 40px; margin-right: auto; margin-left: auto; float: left; margin: 0 10px; text-align: center;
+    padding: 3rem; color: deepskyblue; display: block; font-family: DOSGothic}
+.word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
 .form-group{text-align: center; width: 100%; margin: 30px;}
 .hello_word{text-align: center; width: 100%;}
 
@@ -80,21 +168,22 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
 
 .button{text-align: center; width: 18rem; height: 4rem; border: 1px solid #FAEBEF;
-    display: block; margin-right: auto; margin-left: auto; overflow: hidden;}
+    display: block; margin-right: auto; margin-left: auto; overflow: hidden; font-family: DOSGothic;}
 .button a{font-size: 1.5rem; color:#ffffff; text-decoration: none; line-height:60px; z-index:2;
     position:relative; transition:all .5s ease; display: block;
 }
 .effect{
     width: 18.2rem; height: 4rem; background:#DCE2F0; position:absolute;
     z-index: 1; transition:all .5s ease; display: none;
+    font-family: DOSGothic
 }
 .button:hover .effect{
     display: block;
 }
 .button:hover a{
-    color:#333D79;
+    color:#FCEDDA;
 }
 
 /* 푸터 */
-.footer {text-align: center; width: 100%;}
+.footer {font-family: DOSGothic; color:white; text-align: center; width: 100%;}
 #footer .container {width: 100%; margin: 0 auto; background: rgba(0,0,0,0.3)}
