--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -73,7 +73,8 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 }
 
 #main .main-check-box input {
-    accent-color: #EE4E34;
+    accent-color: #EE4E34; width: 23px; height: 23px; cursor: pointer;
+
 }
 
 
