--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -124,7 +124,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
     border-radius: 40px; margin-right: auto; margin-left: auto;
     padding: 3rem; color: white; display: block; font-family: DOSGothic}
 .word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
-.form-group{text-align: center; width: 100%; margin: 30px;}
+.form-group{text-align: center; width: 100%; margin: 30px; float: right;}
 .hello_word{text-align: center; width: 100%;}
 .main2 {
     border:2px solid deepskyblue; width: 8rem; background: rgb(255,255,255,0.6); font-size: 1.3rem; word-spacing: 0.2rem;
