--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,7 +9,6 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
 /* 레이아웃 */
 #header {}
-#footer {text-align: center; position: relative; transform: translateY(-100%);}
 
 /* 컨테이너 */
 /*.container {width: 100%; margin: 0 auto; background: rgba(0,0,0,0.3)}*/
@@ -145,22 +144,22 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
     display: inline;
 }
 
-#main .main-check-question {
+#main-chk .main-check-question {
     text-align: center; font-size: 2rem; color: #EE4E34; background: rgba(255, 255, 255); padding: 2rem;
     width: 40rem; margin-right: auto; margin-left: auto; border: 2px solid #EE4E34
 }
 
-#main .main-check-box {
+#main-chk .main-check-box {
     display: flex; justify-content: space-between; text-align: center; margin: 1.3rem; margin: auto; width: 40rem;
     padding: 2rem; font-size: 1.5rem;
 
 }
 
-#main .main-check-box .main-check-box-matter {
+#main-chk .main-check-box .main-check-box-matter {
     width: 15rem;
 }
 
-#main .main-check-box input {
+#main-chk .main-check-box input {
     accent-color: #EE4E34; width: 23px; height: 23px; cursor: pointer;
 
 }
@@ -206,4 +205,6 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
 /* 푸터 */
 .footer {font-family: DOSGothic; color:white; text-align: center; width: 100%;}
+#footer {text-align: center; position: relative; transform: translateY(-100%);}
+#footer-chk {text-align: center; width: 100%; margin: 0 auto; background: rgba(0,0,0,0.3)}
 #footer .container {width: 100%; margin: 0 auto; background: rgba(0,0,0,0.3)}
