--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" th:href="@{/css/reset.css}" />
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" th:href="@{/css/glitch.css}"/>
 </head>
 <body>
         <script type="module" th:src="@{/js/app.js}"></script>
@@ -30,7 +31,7 @@
                     이름을 입력해 주시겠습니까?
                 </div>
             </div>
-            <div class="container">
+            <div>
                 <div class="main2">
                     솔직하게<br>
                     답변해줘요
