--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,6 +47,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
     animation: glitch 500ms infinite;
 }
+
 @font-face {
     font-family: 'DOSGothic';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/DOSGothic.woff') format('woff');
@@ -61,67 +62,11 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
     font-style: normal;
 }
 
-.header_object span b{
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.header_object span b:first-child{
-    animation: glitch 650ms infinite;
-    clip-path: polygon(0 0, 100% 0 ,100% 45%,0 45%);
-    transform: translate(-0.05em, -0.0125em);
-    opacity: 0.8;
-}
-.header_object span b:last-child{
-    animation: glitch 375ms infinite;
-    clip-path: polygon(0 60%, 100% 60% ,100% 100%,0 100%);
-    transform: translate(0.0125em,0.025em);
-    opacity: 0.8;
-}
-@keyframes glitch {
-    0%{
-        text-shadow:
-                0.05em 0 0 rgba(255,0,0,0.75),
-                -0.025em -0.05em 0 rgba(0,255,0,0.75),
-                0.025em 0.05em 0 rgba(0,0,255,0.75);
-    }
-    14%{
-        text-shadow:
-                0.05em 0 0 rgba(255,0,0,0.75),
-                -0.025em -0.05em 0 rgba(0,255,0,0.75),
-                0.025em 0.05em 0 rgba(0,0,255,0.75);
-    }
-    15%{
-        text-shadow:
-                -0.05em -0.025em 0 rgba(255,0,0,0.75),
-                0.025em -0.025em 0 rgba(0,255,0,0.75),
-                -0.05em -0.05em 0 rgba(0,0,255,0.75);
-    }
-    50%{
-        text-shadow:
-                0.025em 0.05em 0 rgba(255,0,0,0.75),
-                0.05em 0 0 rgba(0,255,0,0.75),
-                0 -0.05em 0 rgba(0,0,255,0.75);
-    }
-    99%{
-        text-shadow:
-                0.025em 0.05em 0 rgba(255,0,0,0.75),
-                0.05em 0 0 rgba(0,255,0,0.75),
-                0 -0.05em 0 rgba(0,0,255,0.75);
-    }
-    100%{
-        text-shadow:
-                -0.025em -0.025em 0 rgba(255,0,0,0.75),
-                -0.025em -0.025em 0 rgba(0,255,0,0.75),
-                -0.025em -0.05em 0 rgba(0,0,255,0.75);
-    }
-    
-}
-
 /* 메인 */
 #main {height: 100%}
+#main2 {height: 100%}
 .main {width: 25rem; background: rgba(230, 235, 239, 0.4); font-size: 1.3rem; word-spacing: 0.2rem;
-    border-radius: 40px; margin-right: auto; margin-left: auto;
+    border-radius: 40px; margin-right: auto; margin-left: auto; display:flex;
     padding: 3rem; color: white; display: block; font-family: DOSGothic}
 .word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
 .form-group{text-align: center; width: 100%; margin: 30px;}
@@ -131,7 +76,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
     border-radius: 40px; margin-right: auto; margin-left: auto; float: left; margin: 0 10px; text-align: center;
     padding: 3rem; color: deepskyblue; display: block; font-family: DOSGothic}
 .word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
-.form-group{text-align: center; width: 100%; margin: 30px;}
+.form-group{text-align: center; width: 100%; margin: 30px; clear: both; bottom: 30px}
 .hello_word{text-align: center; width: 100%;}
 
 .form-group label{font-size: 1.5rem; color: white;}
