--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -5,7 +5,8 @@
     <title>이 겜 해봤음?</title>
 
     <link rel="stylesheet" th:href="@{/css/reset.css}" />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/glitch.css}"/>
 </head>
 <body>
         <script type="module" th:src="@{/js/app.js}"></script>
