--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -31,7 +31,7 @@
                     이름을 입력해 주시겠습니까?
                 </div>
             </div>
-            <div>
+            <div class="container2">
                 <div class="main2">
                     솔직하게<br>
                     답변해줘요
