--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,6 +64,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 /* 메인 */
 #main {height: 100%}
 #main2 {height: 100%}
+.container2{text-align:center}
 .main {width: 25rem; background: rgba(230, 235, 239, 0.4); font-size: 1.3rem; word-spacing: 0.2rem;
     border-radius: 40px; margin-right: auto; margin-left: auto; display:flex;
     padding: 3rem; color: white; display: block; font-family: DOSGothic}
@@ -72,8 +73,8 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 .hello_word{text-align: center; width: 100%;}
 .main2 {
     border:2px solid deepskyblue; width: 8rem; background: rgb(255,255,255,0.6); font-size: 1.3rem; word-spacing: 0.2rem;
-    border-radius: 40px; margin-right: auto; margin-left: auto; float: left; margin: 0 10px; text-align: center;
-    padding: 3rem; color: deepskyblue; display: block; font-family: DOSGothic}
+    border-radius: 40px; margin-right: auto; margin-left: auto; display: inline-block; margin: 0 10px; text-align: center;
+    padding: 3rem; color: deepskyblue; margin: -2.9px; font-family: DOSGothic}
 .word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
 .form-group{text-align: center; width: 100%; margin: 30px; clear: both; bottom: 30px}
 .hello_word{text-align: center; width: 100%;}
