--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -34,15 +34,15 @@
             <div class="container2">
                 <div class="main2">
                     솔직하게<br>
-                    답변해줘요
+                    답변해줘요!
                 </div>
                 <div class="main2">
-                    솔직하게<br>
-                    답변해줘요
+                    총 20문향<br>
+                    3분소요
                 </div>
                 <div class="main2">
-                    솔직하게<br>
-                    답변해줘요
+                    재미로만<br>
+                    봐줘요!
                 </div>
             </div>
 
