--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -49,9 +49,9 @@
 
 
             <div class="container">
-                <form id="nameform" method="post" onsubmit="return jbSubmit()">
+                <form id="nameform" method="post" onsubmit="return inputSubmit()">
                     <div class="form-group">
-<!--                        <label for="myname">이름</label>-->
+                        <label for="myname">이름</label>
                         <input type="text" id="myname" name="" placeholder="이름을 입력해주세요"> <button type="submit" class="btn_submit">등록</button>
                     </div>
                 </form>
