--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -46,7 +46,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 
     animation: glitch 500ms infinite;
 }
-
+/*폰트*/
 @font-face {
     font-family: 'DOSGothic';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/DOSGothic.woff') format('woff');
@@ -60,7 +60,12 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
     font-weight: normal;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'NeoDunggeunmo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.3/NeoDunggeunmo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 /* 메인 */
 #main {height: 100%}
 #main2 {height: 100%}
@@ -93,7 +98,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 .main2:last-child:hover{
     background: rgba(0,128,0,0.4); color: white; border: 2px solid #FCEDDA;
 }
-.word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: #DCE2F0;}
+.word1{font-family: DOSGothic; text-align: center; width: 100%; font-size: 1.5rem; color: rgba(142,142,142);}
 .form-group{text-align: center; width: 100%; margin: 30px; clear: both; bottom: 30px}
 .hello_word{text-align: center; width: 100%;}
 
@@ -164,7 +169,9 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 .button:hover a{
     color:#FCEDDA;
 }
-
+.main-check{
+    font-family: NeoDunggeunmo;
+}
 /* 푸터 */
 
 .footer {font-family: DOSGothic; color:white; text-align: center; width: 100%;}
