--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/reset.css}" />
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/glitch.css}"/>
+    <link rel="stylesheet" th:href="@{/css/result.css}"/>
 </head>
 <body>
         <script type="module" th:src="@{/js/app.js}"></script>
@@ -21,9 +22,12 @@
         <!-- header -->
 
         <main id="main">
+            <div>
+                <p class="chuchun">저희가 추천한 게임은?!</p>
+            </div>
 
-            <div th:each = "game : ${gamelist}">
-                <table border="1">
+            <div class="result" th:each = "game : ${gamelist}">
+                <table border="">
                     <tr align="center">
                         <td th:text="${game.id}  "></td>
                         <td><img th:src="@{./img/}+${game.uri}+.jpg"></td>
@@ -33,14 +37,8 @@
                         <td id="gamename" colspan="2" th:text="${game.name}"></td>
                     </tr>
                 </table>
-
-            <div class="hello_word">
-                <p th:text="'안녕하세요' + ${val.get('1')}">hello! empty</p>
-            </div> <!-- /container -->
-
+            </div>
         </main>
-
-
 
 
 
