--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -108,7 +108,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
     border-radius: 25px; padding-left: 2rem; outline-style: none; -webkit-appearance: none; font-size: 25px;
 }
 .form-group input::placeholder{
-    font-size: 1.2rem;
+    font-size: 20px; color: rgb(255,51,51,0.6); line-height: 5;
 }
 
 .main-check {
@@ -178,6 +178,7 @@ canvas { width: 100%; height: 100%; position: fixed; top: 0; z-index: -4; }
 .form-group .btn_submit:hover{
     color:white ;
 }
+
 
 
 .button{text-align: center; width: 18rem; height: 4rem; border:3px solid rgba(238, 118, 118);
