--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -29,7 +29,7 @@
             <div class="result" th:each = "game : ${gamelist}">
                 <table border="">
                     <tr align="center">
-                        <td th:text="${game.id}  "></td>
+                        <td th:text="${game.id}"></td>
                         <td><img th:src="@{./img/}+${game.uri}+.jpg"></td>
                         <td></td>
                     </tr>
@@ -37,6 +37,7 @@
                         <td id="gamename" colspan="2" th:text="${game.name}"></td>
                     </tr>
                 </table>
+            </div>
             </div>
         </main>
 
