--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -30,7 +30,7 @@
                 <table border="">
                     <tr align="center">
                         <td th:text="${game.id}"></td>
-                        <td><img th:src="@{./img/}+${game.uri}+.jpg"></td>
+                        <td><img th:src="@{./imgs/}+${game.uri}+.jpg"></td>
                         <td></td>
                     </tr>
                     <tr align="center">
