--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -27,17 +27,24 @@
             </div>
 
             <div class="result" th:each = "game : ${gamelist}">
-                <table border="">
-                    <tr align="center">
-                        <td th:text="${game.id}"></td>
-                        <td><img th:src="@{./img/}+${game.uri}+.jpg"></td>
-                        <td></td>
-                    </tr>
-                    <tr align="center">
-                        <td id="gamename" colspan="2" th:text="${game.name}"></td>
-                    </tr>
-                </table>
-            </div>
+                <div class="mainresult">
+                    <div class="topname">
+                        <p class= "name" th:text="${game.name}"/>
+                    </div>
+                    <div class="videoImg">
+                        <div class="gameimg">
+                            <img class="gameimg2" th:src="@{./imgs/}+${game.uri}+.jpg"/>
+                        </div>
+                        <video control  class="videoSrc">
+                            <source th:src="${game.videoUrl}"
+                                    type="video/webm">
+                        </video>
+                    </div>
+
+
+
+
+                </div>
             </div>
         </main>
 
