--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -34,15 +34,21 @@
                     <div class="videoImg">
                         <div class="gameimg">
                             <img class="gameimg2" th:src="@{./imgs/}+${game.uri}+.jpg"/>
+                            <div class="exten">
+                            <p class="exten2" th:text="${game.explanation}"/>
+                            </div>
                         </div>
                         <video control  class="videoSrc">
                             <source th:src="${game.videoUrl}"
                                     type="video/webm">
                         </video>
-                    </div>
 
-
-
+                        <div class="resultbuttonout">
+                          <div class="resultbutton">
+                            <div class="resulteffect"></div>
+                                <a class="a" href="/input">다시하기</a>
+                            </div>
+                        </div>
 
                 </div>
             </div>
