--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -36,12 +36,12 @@
                         <div class="gameimg">
                             <img class="gameimg2" th:src="@{./imgs/}+${game.uri}+.jpg"/>
                             <div class="exten">
-                            <p class="exten2" th:text="${game.explanation}"/>
+<!--                            <p class="exten2" th:text="${game.explanation}"/>-->
                             </div>
                         </div>
                         <video control  class="videoSrc">
-                            <source th:src="${game.videoUrl}"
-                                    type="video/webm">
+<!--                            <source th:src="${game.videoUrl}"-->
+<!--                                    type="video/webm">-->
                         </video>
 
                         <div class="resultbuttonout">
