--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -5,18 +5,25 @@
     width: 45rem;
     margin-left: auto;
     margin-right: auto;
+    background: rgba(238, 78, 52, 0.4);
+    height: 20rem;
+    border-radius: 2rem;
 }
 
 .exten{
     clear: both;
     margin-top: 20px;
     font-family: DOSGothic;
+    color: honeydew;
+    font-weight: bold;
+
 }
 
 .topname {
     text-align: left;
     font-size: 35px;
     font-family: DOSGothic;
+    color:honeydew;
 }
 
 .videoImg{
@@ -28,7 +35,6 @@
     float:left;
     width:215px;
     height:100px;
-    background: rgba(238, 118, 118,0.4);
 }
 
 .gameimg2{
