--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>이 겜 해봤음?</title>
 
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/imgs/console.png}">
     <link rel="stylesheet" th:href="@{/css/reset.css}" />
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/glitch.css}"/>
