--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -79,3 +79,12 @@
     font-weight: normal;
     font-style: normal;
 }
+.share{
+    text-align: center;
+    padding: 20px;
+}
+.shares{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
