--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -12,6 +12,9 @@
 </head>
 <body>
         <script type="module" th:src="@{/js/app.js}"></script>
+        <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+        <script type="text/javascript" th:src="@{/js/matter.js}"></script>
+
 
         <header id="header">
             <div id="container">
@@ -53,6 +56,18 @@
                             <div class="resulteffect"></div>
                                 <a class="a" href="/input">다시하기</a>
                             </div>
+                            <div class="share">
+                                <a id="kakao-link-btn" href="javascript:kakaotalkshare()">
+                                    <img class="shares" th:src="@{./icons/kakao-talk.png}" />
+                                </a>
+                                <a id="facebook-link-btn" href="javascript:shareFacebook()">
+                                    <img class="shares" th:src="@{./icons/facebook.png}"/>
+                                </a>
+                                <a id="twittwe-link-btn" href="javascript:shareTwitter()">
+                                    <img class="shares" th:src="@{./icons/twitter.png}"/>
+                                </a>
+                            </div>
+                          </div>
                         </div>
                 </div>
         </main>
