--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,6 +5,14 @@
     <title>이 겜 해봤음?</title>
 
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/imgs/console.png}">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="이 겜 해봤음?">
+    <meta property="og:description" content="요즘 할 게임이 없다고? 게임 찾아줄께! 너도 와서 한번 해봐!">
+    <meta property="og:image" content="https://ifh.cc/g/gM1N5a.jpg">
+    <meta property="og:url" content="http://3.92.225.108:8080/result">
+
+
     <link rel="stylesheet" th:href="@{/css/reset.css}" />
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/glitch.css}"/>
