--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -57,15 +57,14 @@
                             <div class="resulteffect"></div>
                                 <a class="a" href="/input">다시하기</a>
                             </div>
+
                             <div class="share">
+                                <p class = "sharefont">공유하기</p>
                                 <a id="kakao-link-btn" href="javascript:kakaotalkshare()">
                                     <img class="shares" th:src="@{./icons/kakao-talk.png}" />
                                 </a>
                                 <a id="facebook-link-btn" href="javascript:shareFacebook()">
                                     <img class="shares" th:src="@{./icons/facebook.png}"/>
-                                </a>
-                                <a id="twittwe-link-btn" href="javascript:shareTwitter()">
-                                    <img class="shares" th:src="@{./icons/twitter.png}"/>
                                 </a>
                             </div>
                           </div>
