--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -81,10 +81,16 @@
 }
 .share{
     text-align: center;
-    padding: 20px;
+    padding-top: 8px;
 }
 .shares{
     width: 50px;
     height: 50px;
-    margin-right: 10px;
+    margin-right: 7px;
+}
+.sharefont{
+    text-align: center;
+    font-family: DOSGothic;
+    color:rgba(238, 118, 118 );
+    font-size: 18px;
 }
