--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -59,6 +59,7 @@
                             </div>
 
                             <div class="share">
+                                <div class="sharebackground">
                                 <p class = "sharefont">공유하기</p>
                                 <a id="kakao-link-btn" href="javascript:kakaotalkshare()">
                                     <img class="shares" th:src="@{./icons/kakao-talk.png}" />
@@ -66,6 +67,7 @@
                                 <a id="facebook-link-btn" href="javascript:shareFacebook()">
                                     <img class="shares" th:src="@{./icons/facebook.png}"/>
                                 </a>
+                                </div>
                             </div>
                           </div>
                         </div>
